# my-reverse-proxy

./: .gitignore  Cargo.toml  Dockerfile  PROJECT_DESCRIPTION.md  README.md
.cursor/: PROJECT_DESCRIPTION.md
.github/workflows/: release.yaml
docs/: TODO.md  endpoint-protection.md  gateway-protocol.md  h1-pool.md  h2-pool.md  h2-upstream-pool-plan.md  header-auth.md  mcp-oauth.md  mcp.md  pool-lifecycle.md  proxy-pass-resolution.md
my-reverse-proxy/: Cargo.toml  Dockerfile
my-reverse-proxy-ui/: Cargo.toml  Dioxus.toml  build.sh
my-reverse-proxy-ui/assets/: styled.css
my-reverse-proxy-ui/public/assets/: app.css
my-reverse-proxy-ui/src/: main.rs
my-reverse-proxy-ui/src/api/: configuration.rs  logs.rs  mod.rs
my-reverse-proxy-ui/src/models/: configuration.rs  logs.rs
my-reverse-proxy-ui/src/views/: dashboard.rs  logs_dialog.rs  mod.rs
my-reverse-proxy/src/: consts.rs  main.rs  upstream_status.rs
my-reverse-proxy/wwwroot/: index.html
src/: consts.rs  files_cache.rs  main.rs  populate_variable.rs  settings.rs  utils.rs  variables_reader.rs
src/app/: active_listen_ports.rs  app.rs  app_ctx.rs  cert_pass_keys.rs  client_certificates_cache.rs  ip_blocklist.rs  local_port_allocator.rs  metrics.rs  mod.rs  prometheus.rs  rps_accumulator.rs  saved_client_cert.rs  ssh_sessions_pool.rs  ssl_certificate.rs  traffic_accumulator.rs
src/app_configuration/: app_configuration.rs  end_point_type.rs  http_endpoint_info.rs  http_listen_port_configuration.rs  http_listen_port_info.rs  http_type.rs  listen_port_configuration.rs  mod.rs  proxy_pass_location_config.rs  tcp_endpoint_host_config.rs  tcp_over_ssh_host_config.rs
src/configurations/: _file_source.rs  allowed_users_list.rs  app_configuration.rs  app_configuration_inner.rs  end_point_type.rs  file_source.rs  google_auth_credentials.rs  host_str.rs  http_endpoint_info.rs  http_listen_port_configuration.rs  http_listen_port_info.rs  http_type.rs  listen_port_configuration.rs  local_file_path.rs  mcp_endpoint_host_config.rs  mod.rs  modify_headers_config.rs  my_reverse_proxy_remote_endpoint.rs  proxy_pass_location_config.rs  proxy_pass_to_config.rs  remote_host.rs  ssh_configs.rs  ssh_configuration.rs  ssl_certificate_id.rs  tcp_endpoint_host_config.rs  tcp_over_ssh_host_config.rs  white_list_ip_list_config.rs
src/crl/: list_of_crl.rs
src/error_templates/: generate_layout.rs
src/flows/: find_proxy_pass_by_uri.rs  get_and_check_app_config.rs  get_client_certificate.rs  get_configurations.rs  get_file.rs  get_locations.rs  kick_off_endpoints.rs  load_client_certificate.rs  load_everything_from_settings.rs  load_ssl_certificate.rs  mod.rs  populate_configurations.rs  refresh_ca_from_settings.rs  refresh_ip_list_from_settings.rs  refresh_ssl_certificate_from_settings.rs  refresh_tls_certificate_from_settings.rs  refresh_users_list.rs  reload_endpoint_configuration.rs  reload_port_configurations.rs
src/google_auth/: generate_authorized_page.rs  generate_login_page.rs  generate_logout_page.rs  html.rs  mod.rs  resolve_email.rs  result.rs  token.rs
src/h1_proxy_server/: authorize.rs  h1_current_request.rs  h1_read_part.rs  h1_server_write_part.rs  h1_writer.rs  kick_of_h1_reverse_proxy_server.rs  loop_buffer.rs  mod.rs  rev_proxy_error.rs  server_loop.rs
src/h1_remote_connection/: inner.rs  mod.rs  remote_connection.rs  response_read_loop.rs  upstream.rs
src/h1_server/: authorize.rs  from_remote_to_server_loop.rs  h1_read_part.rs  kick_of_h1_reverse_proxy_server.rs  loop_buffer.rs  mod.rs  read_headers.rs  rev_proxy_error.rs  server_loop.rs  write_headers.rs
src/h1_utils/: h1_headers_first_line.rs  http1_headers_builder.rs  http1_response_builder.rs  http_first_line_verification.rs  http_header.rs  http_headers.rs  mod.rs
src/http2_client_pool/: http2_client_pool.rs  http2_client_pool_inner.rs  http2_client_pool_item.rs
src/http_client/: cacert-2023-08-22.pem  cert_content.rs  connect_to_http2_endpoint.rs  connect_to_http2_over_ssh.rs  connect_to_http2_unix_socket_endpoint.rs  connect_to_http_endpoint.rs  connect_to_http_over_ssh.rs  connect_to_http_unix_socket_endpoint.rs  connect_to_tls_endpoint.rs  error.rs  http1_client.rs  http1_over_ssh_client.rs  http2_client.rs  http2_client_connection.rs  http2_client_old.rs  http_client.rs  http_client_connection.rs  http_connector.rs  http_tls_connector.rs  mod.rs  ssh_connector.rs  tcp_stream_wrapper.rs  utils.rs  websocket_client.rs
src/http_client_connectors/: http_connector.rs  http_over_gateway_connection.rs  http_over_gateway_connector.rs  http_tls_connector.rs  mod.rs  ssh_connector.rs  unix_socket_http_connector.rs
src/http_client_pool/: http_client_pool.rs  http_client_pool_inner.rs  http_client_pool_item.rs  mod.rs
src/http_clients/: http2_clients.rs  http_clients.rs  mod.rs
src/http_content_source/: content_type.rs  file_content_src.rs  mod.rs  remote_http_content_src.rs  request_executor.rs  ssh_file_content_src.rs  static_content_src.rs
src/http_control/: builder.rs  mod.rs  startup.rs
src/http_proxy_pass/: allowed_user_list.rs  error.rs  handle_ga.rs  host_port.rs  http_content_builder.rs  http_listen_port_info.rs  http_proxy_pass.rs  http_proxy_pass_content_source.rs  http_proxy_pass_identity.rs  http_proxy_pass_inner.rs  http_proxy_pass_remote_endpoint.rs  http_request_builder.rs  http_response_builder.rs  http_server_connection_info.rs  mod.rs  proxy_pass_client.rs  proxy_pass_configurations.rs  proxy_pass_content_source.rs  proxy_pass_endpoint_info.rs  proxy_pass_location.rs  proxy_pass_locations.rs  source_http_configuration.rs  source_http_data.rs  web_socket_hyper.rs  (+1 more)
src/ssl/: mod.rs  (+4 more)
(+674 files in other folders)
