[package]
name = "my-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "placeholders",
] }

my-settings-reader = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }


my-ssh = { git = "https://github.com/MyJetTools/my-ssh.git", tag = "0.1.0" }


hyper = { version = "*", features = ["full"] }

tokio = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "*"
tokio-rustls = { version = "0.26.*", features = ["tls12"] }
bytes = "*"
lazy_static = "*"
pem = "*"
serde = { version = "*", features = ["derive"] }
futures = "*"
serde_yaml = "*"
http2parse = "*"
rustls-pki-types = "*"
rustls-pemfile = "*"
x509-parser = { version = "*", features = ["verify"] }
my-tls = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-tls.git" }
async-trait = "*"
hyper-tungstenite = "*"
