[package]
name = "my-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }

rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "placeholders",
    "base64",
    "with-tokio",
] }

my-settings-reader = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-settings-reader.git" }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }

my-ssh = { git = "https://github.com/MyJetTools/my-ssh.git", tag = "0.1.1" }

encryption = { git = "https://github.com/MyJetTools/encryption.git", tag = "0.1.0" }


hyper = { version = "*", features = ["full"] }

tokio = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "*"
bytes = "*"
lazy_static = "*"
pem = "*"
serde = { version = "*", features = ["derive"] }
futures = "*"
serde_yaml = "*"
http2parse = "*"
rustls-pki-types = "*"
rustls-pemfile = "*"
x509-parser = { version = "*", features = ["verify"] }
my-tls = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-tls.git", features = [
    "crl",
] }
async-trait = "*"
hyper-tungstenite = "*"
uuid = { version = "*", features = ["v4"] }
prost = "*"
prost-types = "*"
serde_json = "*"
rcgen = "*"
flate2 = "*"
