[package]
name = "my-reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.8.3", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "static-files",
    "macros",
] }

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
    "with-tokio",
] }


rust-common = { tag = "0.1.1", git = "https://github.com/MyJetTools/rust-common.git", features = [
    "placeholders",
] }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }

my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-ssh = { git = "https://github.com/MyJetTools/my-ssh.git", tag = "0.1.2" }

encryption = { git = "https://github.com/MyJetTools/encryption.git", tag = "0.1.1" }


hyper = { version = "*", features = ["full"] }

tokio = { version = "*", features = ["full"] }

my-http-client = { path = "vendor/my-http-client" }

hyper-util = { version = "*", features = ["tokio", "server", "http1", "http2"] }
http-body-util = "*"
bytes = "*"
lazy_static = "*"
pem = "*"
serde = { version = "*", features = ["derive"] }
futures = "*"
tokio-util = { version = "*", features = ["compat"] }
futures-util = { version = "*", features = ["compat"] }
serde_yaml = "*"
http2parse = "*"
rustls-pki-types = "*"
rustls-pemfile = "*"
x509-parser = { version = "*", features = ["verify"] }
my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git" }
async-trait = "*"
hyper-tungstenite = "*"
uuid = { version = "*", features = ["v4"] }
prost = "*"
prost-types = "*"
serde_json = "*"
rcgen = "*"
time = "*"
flate2 = "*"
http = "*"
prometheus = "*"
url-utils = { tag = "0.1.4", git = "https://github.com/MyJetTools/url-utils.git" }
ip2location = "0.6"
arc-swap = "1"
parking_lot = "0.12"
ahash = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = "2"
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1"
rand_core = { version = "0.6", features = ["std"] }
zstd = "0.13"
