[package]
name = "my-reverse-proxy-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
dioxus-utils = { tag = "0.7.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "web",
] }
dioxus-logger = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
web-sys = { version = "*", features = ["Window", "Location"] }

[profile]
[profile.wasm-dev]
inherits = "dev"
opt-level = 1
